# jfft

./: .gitmodules  CMakeLists.txt  README.md
bench2fftw/: CMakeLists.txt  libfftw3-3.exp  libfftw3-3.lib  libfftw3f-3.exp  libfftw3f-3.lib  main.cpp
bench2gfft/: CMakeLists.txt  main.cpp
bench2nr/: CMakeLists.txt  main.cpp
gensincos/: CMakeLists.txt  main.cpp
jfft/: jfft.h
jfft.tests/: CMakeLists.txt  jfft_tests.cpp  jfft_tests.h  test.cpp
